nodejs-manifest/app-with-livenessprobe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-with-liveness
spec:
  containers:
  - image: manhdaovan/nodejs-sample-app
    name: nodejs-with-liveness
    livenessProbe:
      httpGet:
        path: /
        port: 8080
