nodejs-manifest/nodejs-app-basic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-app
  labels:
    name: nodejs-app
spec:
  containers:
  - name: nodejs-app
    image: manhdaovan/nodejs-sample-app
    ports:
      - containerPort: 8080
        protocol: TCP
