nodejs-manifest/nodejs-app-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-app-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
  - image: manhdaovan/nodejs-sample-app
    name: nodejs-app-gpu
