nodejs-manifest/nodejs-app-with-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-app-with-label
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
  - image: manhdaovan/nodejs-sample-app
    name: nodejs-app-with-label
    ports:
    - containerPort: 8080
      protocol: TCP
