nodejs-manifest/app-fortune-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
  labels:
    app: fortune
spec:
  containers:
  - image: luksa/fortune
    name: html-generator
    volumeMounts:
    - name: html
      mountPath: /var/htdocs
  - image: nginx:alpine
    name: web-server
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
  - name: html
    emptyDir: 
      medium: Memory

---
apiVersion: v1
kind: Service
metadata:
  name: fortune-svc
spec:
  type: NodePort
  selector:
    app: fortune
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30123
