nodejs-manifest/app-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-lb
spec:
  type: LoadBalancer # minikube doesn't support this.
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nodejs-app
