nodejs-manifest/app-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: nodejs-app
