nodejs-manifest/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
spec:
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app: nodejs-app
