nodejs-manifest/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs-ingress
spec:
  rules:
  - host: nodejs.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs-nodeport
          servicePort: 80
